<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<TableRow>
		<TextView
			style="@style/label"
			android:text="@string/asa_tax_setting"/>
		<TextView
			android:id="@+id/asa_tax_setting"
			style="@style/value"/>
	</TableRow>
	<TableRow>

		<TextView
			style="@style/label"
			android:text="@string/asa_mofa_note"/>

		<TextView
			android:id="@+id/asa_mofa_note"
			style="@style/value"/>
	</TableRow>
	<TableRow>

		<TextView
			style="@style/label"
			android:text="@string/asa_landorder_code"/>

		<TextView
			android:id="@+id/asa_landorder_code"
			style="@style/value"/>
	</TableRow>
	<TableRow>

		<TextView
			style="@style/label"
			android:text="@string/asa_new_ver"/>

		<TextView
			android:id="@+id/asa_new_ver"
			style="@style/value"/>
	</TableRow>
	<TableRow>

		<TextView
			style="@style/label"
			android:text="@string/cultivation_type"/>

		<TextView
			android:id="@+id/cultivationType"
			style="@style/value"/>
	</TableRow>
	<TableRow>

		<TextView
			style="@style/label"
			android:text="@string/asa_spray_code"/>

		<TextView
			android:id="@+id/asa_spray_code"
			style="@style/value"/>
	</TableRow>
	<TableRow>

		<TextView
			style="@style/label"
			android:text="@string/asa_herbicide_code"/>

		<TextView
			android:id="@+id/asa_herbicide_code"
			style="@style/value"/>
	</TableRow>
	<TableRow>

		<TextView
			style="@style/label"
			android:text="@string/asa_soilfertilizer_codes"/>

		<TextView
			android:id="@+id/asa_soilfertilizer_codes"
			style="@style/value"/>
	</TableRow>
	<TableRow>

		<TextView
			style="@style/label"
			android:text="@string/asa_fertilizer_code"/>

		<TextView
			android:id="@+id/asa_fertilizer_code"
			style="@style/value"/>
	</TableRow>
	<TableRow>

		<TextView
			style="@style/label"
			android:text="@string/asa_fertilizer_soil_code"/>

		<TextView
			android:id="@+id/asa_fertilizer_soil_code"
			style="@style/value"/>
	</TableRow>
</TableLayout>