<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/searchLastPest"
        android:id="@+id/btn_search_last_sprayop" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/searchPest"
        android:id="@+id/btn_search_pest"
        android:layout_below="@id/btn_search_last_sprayop"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/searchFert"
        android:id="@+id/btn_search_fert"
        android:layout_below="@id/btn_search_pest"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:id="@+id/textView"

        android:background="@color/lightgreen"
        android:layout_below="@id/btn_search_fert"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/delete_archive"
        android:id="@+id/btn_del_arch"
        android:layout_below="@id/textView"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:id="@+id/textViewClearArchive"
        android:background="@color/lightred"
        android:text="@string/delete_archive_mes"
        android:layout_below="@id/btn_del_arch"/>
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/deleteallsended"
        android:id="@+id/check_del_all_sended"
        android:layout_below="@id/textViewClearArchive" />

</RelativeLayout>
</ScrollView>
