<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/edit_name"
    android:layout_width="wrap_content" android:layout_height="wrap_content"
    android:layout_gravity="center" android:orientation="vertical">
    <ScrollView 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:stretchColumns="1" >
			<TextView 
			    android:id="@+id/txt_date"
			    android:text="@string/hint_date"
            	android:layout_width="0dip"
            	android:layout_weight="1"/>
			<EditText 
			    android:id="@+id/edtxt_date"
			    android:layout_width="0dip"
            	android:layout_weight="1"
            	android:inputType="date"/>
            
        </TableRow>
        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:stretchColumns="1" >
			<TextView 
			    android:id="@+id/txt_docnr"
			    android:text="@string/har_number"
            	android:layout_width="0dip"
            	android:layout_weight="1"/>
			<EditText 
			    android:id="@+id/edtxt_docnr"
			    android:layout_width="0dip"
            	android:layout_weight="1"
            	android:inputType="number"/>
            
        </TableRow>
		<TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:stretchColumns="1" >
			<TextView 
			    android:id="@+id/txt_amount"
			    android:text="@string/har_amount"
            	android:layout_width="0dip"
            	android:layout_weight="1"/>
			<EditText 
			    android:id="@+id/edtxt_amount"
			    android:layout_width="0dip"
            	android:layout_weight="1"
            	android:inputType="number"/>
            
        </TableRow>
        <TableRow
            android:id="@+id/tableRow11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:stretchColumns="1" >
			<TextView 
			    android:id="@+id/txt_pass"
			    android:text="@string/har_stage"
            	android:layout_width="0dip"
            	android:layout_weight="1"/>
            
        </TableRow>
  		<TableRow
            android:id="@+id/tableRow10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:stretchColumns="1" >
			
			<TextView 
			    android:id="@+id/pass1"
			    android:text="1"
            	android:layout_width="0dip"
            	android:layout_weight="1"
            	android:gravity="center"
                tools:ignore="HardcodedText" />
            <TextView 
			    android:id="@+id/pass2"
			    android:text="2"
            	android:layout_width="0dip"
            	android:layout_weight="1"
            	android:gravity="center"
                tools:ignore="HardcodedText" />
            <TextView 
			    android:id="@+id/pass3"
			    android:text="3"
            	android:layout_width="0dip"
            	android:layout_weight="1"
            	android:gravity="center"
                tools:ignore="HardcodedText" />
            <TextView 
			    android:id="@+id/pass4"
			    android:text="4"
            	android:layout_width="0dip"
            	android:layout_weight="1"
            	android:gravity="center"
                tools:ignore="HardcodedText" />
            <TextView 
			    android:id="@+id/pass5"
			    android:text="5"
            	android:layout_width="0dip"
            	android:layout_weight="1"
            	android:gravity="center"/>
        </TableRow>
        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:stretchColumns="1" >
			<TextView 
			    android:id="@+id/txt_quality"
			    android:text="@string/har_category"
            	android:layout_width="0dip"
            	android:layout_weight="1"/>
			<Spinner
			    android:id="@+id/spinner_quality"
			    android:layout_width="0dip"
            	android:layout_weight="1"/>
            
        </TableRow>
        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:stretchColumns="1" >
			<TextView 
			    android:id="@+id/txt_notes"
			    android:text="@string/har_note"
            	android:layout_width="0dip"
            	android:layout_weight="1"/>
			<EditText 
			    android:id="@+id/edtxt_notes"
			    android:layout_width="0dip"
            	android:layout_weight="1"/>
            
        </TableRow>
        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:stretchColumns="1" >
			<TextView 
			    android:id="@+id/txt_boxes"
			    android:text="@string/har_boxes"
            	android:layout_width="0dip"
            	android:layout_weight="1"/>
			<EditText 
			    android:id="@+id/edtxt_boxes"
			    android:layout_width="0dip"
            	android:layout_weight="1"
            	android:inputType="numberSigned|number"/>
            
        </TableRow>
        <TableRow
            android:id="@+id/tableRow7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             >
			<TextView 
			    android:id="@+id/txt_sugar"
			    android:text="@string/har_sugar"
            	android:layout_width="0dip"
            	android:layout_weight="1"/>
			<TextView 
			    android:id="@+id/txt_acid"
			    android:text="@string/har_acid"
            	android:layout_width="0dip"
            	android:layout_weight="1"/>
			<TextView 
			    android:id="@+id/txt_phenole"
			    android:text="@string/har_phen"
            	android:layout_width="0dip"
            	android:layout_weight="1"/>
			<TextView 
			    android:id="@+id/txt_pH"
			    android:text="@string/har_ph"
            	android:layout_width="0dip"
            	android:layout_weight="1"/>
			</TableRow>
        <TableRow
            android:id="@+id/tableRow8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             >
			<EditText 
			    android:id="@+id/edtxt_sugar"
			    android:layout_width="0dip"
            	android:layout_weight="1"/>
           <EditText 
			    android:id="@+id/edtxt_acid"
			    android:layout_width="0dip"
            	android:layout_weight="1"/>
			<EditText 
			    android:id="@+id/edtxt_phen"
			    android:layout_width="0dip"
            	android:layout_weight="1"/>
			<EditText 
			    android:id="@+id/edtxt_pH"
			    android:layout_width="0dip"
            	android:layout_weight="1"/>
        </TableRow>
        <TableRow
            android:id="@+id/tableRow9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/cancel_confirm_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancelbutton"/>
            <Button
                android:id="@+id/ok_confirm_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/okbutton"/>
        </TableRow>

        

        
    </TableLayout>
    </ScrollView>
</LinearLayout>
