<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/edit_name"
    android:layout_width="wrap_content" android:layout_height="wrap_content"
    android:layout_gravity="center" android:orientation="vertical"  >

    <TextView
        android:id="@+id/lbl_dose_hl" android:text="@string/input_dose_hl"
        android:layout_width="wrap_content" android:layout_height="wrap_content" />
      
    <EditText
        android:id="@+id/txt_dose_hl"
        android:layout_width="match_parent"  android:layout_height="wrap_content" 
        android:inputType="numberDecimal"
          android:digits="0123456789.,$"
        android:imeOptions="actionDone" />
    <TextView
        android:id="@+id/lbl_dose_total" android:text="@string/input_amount_total"
        android:layout_width="wrap_content" android:layout_height="wrap_content" />
      
    <EditText
        android:id="@+id/txt_dose_total"
        android:layout_width="match_parent"  android:layout_height="wrap_content" 
        android:inputType="numberDecimal"
        android:digits="0123456789.,$"
        android:imeOptions="actionDone" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >


            <Button
                android:id="@+id/cancel_confirm_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancelbutton" />
            <Button
                android:id="@+id/ok_confirm_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/okbutton" />
        </TableRow>

        

        
    </TableLayout>

</LinearLayout>